--- a/src/NoMoreClick/appsettings.json
+++ b/src/NoMoreClick/appsettings.json
@@ -5,5 +5,7 @@
   "ToggleClickAssistanceMs": 1080,
   "NoClickAfterTypingMs": 1000,
   "NoClickAfterScrollingMs": 1000,
-  "NoClickAfterPhysicalMouseClickMs": 600
+  "NoClickAfterPhysicalMouseClickMs": 600,
+  "WavFileLocationMouseAssistOn": "C:\\Users\\Jane\\Desktop\\yourCustomSoundForMouseAssistOn.wav",
+  "WavFileLocationMouseAssistOff": "C:\\Users\\Jane\\Desktop\\yourCustomSoundForMouseAssistOff.wav"
 }
